attempt to fix event modal overflow bug on windows

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -210,7 +210,7 @@
   }
 
   .events_modal_block {
-    width:396px;
+    width:394px;
     height:190px;
     float:left;
     text-align:center;
